# kettle

./: .gitignore  Cargo.toml  README.md  install.sh  kettlecli
src/: action_handler.rs  main.rs
src/action_handler/: cli_action.rs  delete_action.rs  exclude_action.rs  get_action.rs  help_action.rs  include_action.rs  init_action.rs  list_action.rs  save_action.rs  use_action.rs
