[package]
name = "kettle"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.0"
clap = "4.1.12"
reqwest = { version = "0.11.18", features = ["blocking"] }
zip = "0.6"
